--- a/Configuration/data/grid-control_backend_freiburg.conf
+++ b/Configuration/data/grid-control_backend_freiburg.conf
@@ -1,5 +1,5 @@
 backend = condor
 
 [condor]
-JDLData = Requirements=(TARGET.CLOUDSITE=="BWFORCLUSTER") +REMOTEJOB=True accounting_group=cms.higgs
+JDLData = Requirements=(TARGET.ProvidesCPU&&TARGET.ProvidesIO) +REMOTEJOB=True accounting_group=cms.higgs +RequestWalltime=7200
 proxy = VomsProxy
