--- a/Configuration/data/grid-control_backend_naf.conf
+++ b/Configuration/data/grid-control_backend_naf.conf
@@ -1,15 +1,8 @@
-backend = local
+backend = condor
 
-[local]
-queue randomize = True
-wms = OGE
-delay output = True
-; proxy = TrivialProxy
+[condor]
 proxy = VomsProxy
-submit options = -l os=sld6
-
-[wms]
-submit options = -l distro=sld6
-
-[constants]
-X509_USER_PROXY=$X509_USER_PROXY
+poolArgs req =
+  walltimeMin => +RequestRuntime
+  dataFiles => +Input_Files
+  scratch space used => request_disk
