--- a/Configuration/data/grid-control_backend_naf7.conf
+++ b/Configuration/data/grid-control_backend_naf7.conf
@@ -1,5 +1,5 @@
 backend = condor
 
 [condor]
-iJDLData = Requirements=(OpSysAndVer=="CentOS7")
+JDLData = Requirements=(OpSysAndVer=="CentOS7")
 proxy = VomsProxy
