--- a/Configuration/data/grid-control_base_config.conf
+++ b/Configuration/data/grid-control_base_config.conf
@@ -58,6 +58,7 @@ GC_GLITE_LOCATION = /cvmfs/grid.cern.ch/emi3ui-latest/etc/profile.d/setup-ui-exa
 [global]
 task = CMSSW
 variable markers = @
+$cpus ; to be set by user
 $cmdargs ; to be set by user
 $workdir ; to be set by user
 $include ; to be set by user
