adapt GC_GLITE_LOCATION in gc config for naf7

--- a/Configuration/data/grid-control_backend_naf7.conf
+++ b/Configuration/data/grid-control_backend_naf7.conf
@@ -3,3 +3,6 @@ backend = condor
 [condor]
 JDLData = Requirements=(OpSysAndVer=="CentOS7")
 proxy = VomsProxy
+
+[constants]
+GC_GLITE_LOCATION = /cvmfs/grid.desy.de/etc/profile.d/grid-ui-env.sh
